main-site/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-site-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      name: main-site
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 2
  template:
    metadata:
      labels:
        name: main-site
    spec:
      containers:
        - name: main-site
          image: 879132841444.dkr.ecr.eu-north-1.amazonaws.com/kessietech:IMAGE_TAG_PLACEHOLDER
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: main-site-service
spec:
  type: ClusterIP
  selector:
    name: main-site
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-site-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: "aws.kessietechinc.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: main-site-service
            port:
              number: 80
  tls:
  - hosts: 
    - aws.kessietechinc.com
    secretName: main-site-tls
